--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
   padding: 2rem;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  align-items: center;
+}
+
+
 .badge {
   padding: .5em 1em;
   background-color: white;
@@ -26,6 +34,7 @@
   padding: 1.5em 2em;
   border-radius: .5em;
   display: flex;
+  max-width: 46em;
 }
 
 .icon-box {
@@ -39,7 +48,7 @@
 
 .card {
   max-width: 460px;
-  background-color: #fff;
+  background-color: #f3f3f3;
   text-align: center;
   padding: 1.5em;
   line-height: 1.8;
@@ -49,6 +58,11 @@
   flex-direction: column;
   border-radius: .75em;
   font-size: 1.2em;
+  transition: all .3s linear;
+}
+
+.card:hover {
+  box-shadow: 0 0 16px #b2b2b2;
 }
 
 .card .icon {
@@ -72,8 +86,93 @@
   color: rgb(34, 34, 34);
 }
 
+.testimonial {
+  color: white;
+  display:  flex;
+  align-items: center;
+  gap: 2em;
+  padding: 1em 2em;
+  height: 250px;
+  max-width: 770px;
+  position: relative;
+  box-shadow: 2px 2px 16px #7a7a7a;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    height: auto;
+    width: 300px;
+    padding: 1em;
+    
+    & .profile-box {
+      height: 150px;
+      width: 100%;
+      z-index: 1;
+
+      & img {
+        object-fit: cover;
+      }
+    }
+
+    .white-box {
+      height: 80px;
+      width: 100%;
+      right: 0;
+      top: 0;
+      background-color: #fdfdfd;
+      /* background-color: red; */
+      position: absolute;
+    }
+  }
+}
+
+.profile-box {
+  width: 240px;
+  height: 300px;
+  flex-shrink: 0;
+}
+
+.profile-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: .5em;
+}
+
+.qoute-icon {
+  width: 48px;
+  display: inline-block;
+  color: #84848481;
+  font-size: 3em;
+}
+
+.qoute-icon img {
+  width: 100%;
+}
+
+.testimonial .text {
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-top: 1em;
+}
+
+.testimonial .name,
+.testimonial .job {
+  font-size: .8em;
+  line-height: 1.5em;
+}
+
+.testimonial .name {
+  font-weight: 600;
+  margin-top: 1.25em;
+}
+
+.testimonial .job {
+  font-weight: 300;
+}
+
 /* Colors codes */
-.danger {
+.danger, .error {
   background-color: #FEE2E1;
   color: #981C18;
 }
