--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,11 @@ main {
 }
 
 .card h3 {
-  color: black;
+  /* color: black; */
   margin: -1.5em 0 1em;
 }
 .card p {
-  color: rgb(34, 34, 34);
+  /* color: rgb(34, 34, 34); */
 }
 
 .testimonial {
